# assignment1-basics

./: bpe copy.py  bpe.py  hw.md  lecture1.md  train.py
.github/: copilot-instructions.md
cs336_basics/: bpe.py  train_bpe.py
cs336_bpe_rs/: Cargo.toml  README.md  pyproject.toml
cs336_bpe_rs/src/: lib.rs
mytmp/tokenizer_out_10000 copy/: tokenizer_vocab.json
tests/: adapters.py
